# Mti680_Data_receiver

./: CMakeLists.txt  Excel_exporter.cpp  Excel_exporter.h  MtiDataReader.cpp  MtiDataReader.h  MtiDataValues.cpp  MtiDataValues.h  MtiParser.cpp  MtiParser.h  README.md  exemple_d'utilisation.cpp  exemple_lecture.cpp  exemple_parse.cpp  main.cpp  main_ancien.cpp  setup_script.iss
include/: xscontroller.h  xsensdeviceapi_csharp.h  xstypes.h
include/xsensdeviceapi/: xscallback.h  xscomcallbackoptions.h  xscontrol.h  xsdevice.h  xsusbhubinfo.h
include/xsensdeviceapi_csharp/: xsensdeviceapi.h
include/xstypes/: xsresultvalue.h
